# rinha-de-backend-24-q1

./: .env  Cargo.toml  Dockerfile  docker-compose.yaml  mongo-init.js  script.sql
.github/workflows/: main.yml
migrations/2024-02-07-011454_create_clientes/: down.sql  up.sql
src/: main.rs  schema.rs
src/config/: database.rs
src/models/: extract.rs  mod.rs  transaction_dto.rs  transaction_result.rs
src/repository/: clients.rs  transaction.rs
src/tests/: common.rs
