[package]
name = "rinha-de-backend-24-q1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1.36.0", features = ["full"] }
diesel = { version = "2.1.0", features = ["postgres"] }
