[package]
name = "rinha-de-backend-24-q1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = "0.4.34"
futures = "0.3.30"
serde = "1.0.196"
serde_derive = "1.0.196"
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }


[dependencies.mongodb]
version = "2.8.0"
default-features = false
features = ["async-std-runtime"]
